# photon

./: CMakeLists.txt
2d/cylinder/: bessel.f  bessik.f  cylindr.f  gnrcbs2d.f  gnzcylf.f  gnzcyljh.f  mediumn.f  readmat.f  sordalc.f  zab.f  zabl.f  zabt.f  zainv.f  zartan.f  zbessf.f  zbesyps.f  znsrefind.f  ztm.f
3d/: biga.f  mediumn.f
Python/: basic_plot.py
refl/: CMakeLists.txt
refl/3d/: CMakeLists.txt  ampldr.f  axspartcl.f  beschb.f  bessik.f  bessjy.f  blf2in3.f  blm.f  blmy.f  c1axsrefl3d.f  c1refl3d.f  cabrefl3d.f  caxsrefl3d.f  crefl3d.f  dl2f1in3.f  dlmsf2in3.f  dlmsumf2in3n.f  dlsumf2in3.f  gen2in3vec.f  gnzbess.f  gzbsvd3d.f  hoslab.f  krassis.f  latgen2d.f  pccslab.f  pccslabc.f  plot-dat.py  rearrfl.f  refl3d.f  refl3dn7.f  sbindx2in3.f  secularc.f  setup.f  setupcl.f  setupdt.f  sphere.f  tmtaxsp.f  tmtaxsp1.f  tmtrx.f  tmtrx1.f  (+3 more)
refl/3d/esther/: CMakeLists.txt  Mkcaxsrefl.txt  ampld.par.f  bll.ttt  caxsrefl3d.f  dlmsf2in3.f  pccslab.f  pccslabc.f  read-3dlkkr.txt  secularc.f  stack.f  tmtaxsp.f
